# advent-of-code-2024

./: Cargo.toml  build.rs
benches/: days.rs
src/: days.rs  lib.rs  main.rs  main_macro.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  dayN.rs  mod.rs
src/util/: grid.rs
