[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

default-run = "advent-of-code-2024"

[[bench]]
name = "days"
harness = false

[dependencies]
bmp = "0.5.0"
clap = { version = "4.5.21", features = ["derive"] }
copy-range = "0.1.1"
divrem = "1.0.0"
gcd = "2.3.0"
homedir = "0.3.4"
indoc = "2.0.5"
itertools = "0.13.0"
nom = "7.1.3"
num = "0.4.3"
reqwest = { version = "0.12.9", features = ["blocking"] }

[dev-dependencies]
criterion = "0.5.1"
